🤖 DEPLOY: last updates

--- a/index.html
+++ b/index.html
@@ -456,9 +456,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_g_1_overall_context_and_goals">G.1 Overall context and goals</a></li>
 <li><a href="#_g_2_current_situation">G.2 Current situation</a></li>
 <li><a href="#_g_3_expected_benefits">G.3 Expected benefits</a></li>
-<li><a href="#_g_4_system_overview">G.4 System overview</a></li>
-<li><a href="#_g_5_limitations_and_exclusions">G.5 Limitations and exclusions</a></li>
-<li><a href="#_g_6_stakeholders">G.6 Stakeholders</a></li>
+<li><a href="#_g_4_functionality_overview">G.4 Functionality overview</a></li>
+<li><a href="#_g_5_high_level_usage_scenarios">G.5 High-level usage scenarios</a></li>
+<li><a href="#_g_6_limitations_and_exclusions">G.6 Limitations and exclusions</a></li>
+<li><a href="#_g_7_stakeholders_and_requirements_sources">G.7 Stakeholders and requirements sources</a></li>
 <li><a href="#_g_7_requirements_sources">G.7 Requirements sources</a></li>
 </ul>
 </li>
@@ -607,7 +608,7 @@ The only available material is the current status of the <a href="#Handbook">Han
 </div>
 </div>
 <div class="sect2">
-<h3 id="_g_4_system_overview">G.4 System overview</h3>
+<h3 id="_g_4_functionality_overview">G.4 Functionality overview</h3>
 <div id="g4-system" class="paragraph">
 <p><code>2</code>
 The <em>system</em> under development in this specification is an unusual one: a book!
@@ -618,11 +619,19 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_g_5_limitations_and_exclusions">G.5 Limitations and exclusions</h3>
-
+<h3 id="_g_5_high_level_usage_scenarios">G.5 High-level usage scenarios</h3>
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+</div>
 </div>
 <div class="sect2">
-<h3 id="_g_6_stakeholders">G.6 Stakeholders</h3>
+<h3 id="_g_6_limitations_and_exclusions">G.6 Limitations and exclusions</h3>
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_g_7_stakeholders_and_requirements_sources">G.7 Stakeholders and requirements sources</h3>
 <div class="paragraph">
 <p>Here is a non-exhaustive list of the stakeholders.</p>
 </div>
@@ -781,7 +790,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <div class="sect2">
 <h3 id="_e_2_components">E.2 Components</h3>
 <div class="paragraph">
-<p>Not applicable.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
 </div>
 </div>
 <div class="sect2">
@@ -794,19 +803,19 @@ The <a href="#companion">[companion]</a> should itself apply the method describe
 <div class="sect2">
 <h3 id="_e_4_assumptions">E.4 Assumptions</h3>
 <div class="paragraph">
-<p>Not applicable.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_e_5_effects">E.5 Effects</h3>
 <div class="paragraph">
-<p>Not applicable.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_e_6_invariants">E.6 Invariants</h3>
 <div class="paragraph">
-<p>Not applicable.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
 </div>
 </div>
 </div>
@@ -945,7 +954,7 @@ The tasks are managed through the use of a collaborative repository: <a href="ht
 <div class="sect2">
 <h3 id="_p_6_risk_and_mitigation_analysis">P.6 Risk and mitigation analysis</h3>
 <div class="paragraph">
-<p>At this point, there is no mitigation analysis.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
 </div>
 </div>
 <div class="sect2">
@@ -1000,19 +1009,27 @@ The tasks are managed through the use of a collaborative repository: <a href="ht
 </div>
 <div class="sect2">
 <h3 id="_s_2_functionality">S.2 Functionality</h3>
-
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_s_3_interfaces">S.3 Interfaces</h3>
-
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_s_4_scenarios_use_cases_user_stories">S.4 Scenarios (use cases, user stories)</h3>
-
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_s_5_prioritization">S.5 Prioritization</h3>
-
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_s_6_verification_and_acceptance_criteria">S.6 Verification and acceptance criteria</h3>
@@ -1051,7 +1068,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-04-16 14:55:43 +0200
+Last updated 2021-04-16 14:57:50 +0200
 </div>
 </div>
 </body>
