--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.2.2 -- 2021-04-16</span>
+<span id="revdate">1.2.1 -- 2021-04-17</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -460,7 +460,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_g_5_high_level_usage_scenarios">G.5 High-level usage scenarios</a></li>
 <li><a href="#_g_6_limitations_and_exclusions">G.6 Limitations and exclusions</a></li>
 <li><a href="#_g_7_stakeholders_and_requirements_sources">G.7 Stakeholders and requirements sources</a></li>
-<li><a href="#_g_7_requirements_sources">G.7 Requirements sources</a></li>
 </ul>
 </li>
 <li><a href="#_environment">Environment</a>
@@ -559,8 +558,8 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <td class="tableblock halign-left valign-top"><p class="tableblock">Minor improvements of goals, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.2</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-04-16</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.1</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-04-17</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
 </tbody>
@@ -621,13 +620,13 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <div class="sect2">
 <h3 id="_g_5_high_level_usage_scenarios">G.5 High-level usage scenarios</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p>{emptysec}</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_g_6_limitations_and_exclusions">G.6 Limitations and exclusions</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p>{emptysec}</p>
 </div>
 </div>
 <div class="sect2">
@@ -694,9 +693,6 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </tr>
 </tbody>
 </table>
-</div>
-<div class="sect2">
-<h3 id="_g_7_requirements_sources">G.7 Requirements sources</h3>
 <div class="paragraph">
 <p>Most of the requirements come from the <a href="#Handbook">Handbook</a>.</p>
 </div>
@@ -790,7 +786,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <div class="sect2">
 <h3 id="_e_2_components">E.2 Components</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p>{emptysec}</p>
 </div>
 </div>
 <div class="sect2">
@@ -803,19 +799,19 @@ The <a href="#companion">[companion]</a> should itself apply the method describe
 <div class="sect2">
 <h3 id="_e_4_assumptions">E.4 Assumptions</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p>{emptysec}</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_e_5_effects">E.5 Effects</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p>{emptysec}</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_e_6_invariants">E.6 Invariants</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p>{emptysec}</p>
 </div>
 </div>
 </div>
@@ -954,7 +950,7 @@ The tasks are managed through the use of a collaborative repository: <a href="ht
 <div class="sect2">
 <h3 id="_p_6_risk_and_mitigation_analysis">P.6 Risk and mitigation analysis</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p>{emptysec}</p>
 </div>
 </div>
 <div class="sect2">
@@ -1068,7 +1064,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-04-16 14:57:50 +0200
+Last updated 2021-04-17 09:55:18 +0200
 </div>
 </div>
 </body>
