🐛 FIX: Minor typo

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_e_6_invariants">E.6 Invariants</a></li>
 </ul>
 </li>
-<li><a href="#_process">Process</a>
+<li><a href="#_project">Project</a>
 <ul class="sectlevel2">
 <li><a href="#_p_1_roles">P.1 Roles</a></li>
 <li><a href="#_p_2_personnel_characteristics_and_constraints">P.2 Personnel characteristics and constraints</a></li>
@@ -817,7 +817,7 @@ The <a href="#companion">[companion]</a> should itself apply the method describe
 </div>
 </div>
 <div class="sect1">
-<h2 id="_process">Process</h2>
+<h2 id="_project">Project</h2>
 <div class="sectionbody">
 <div class="admonitionblock tip">
 <table>
@@ -835,7 +835,7 @@ The <a href="#companion">[companion]</a> should itself apply the method describe
 <div class="sect2">
 <h3 id="_p_1_roles">P.1 Roles</h3>
 <div id="p1-roles" class="paragraph">
-<p><code>1</code>
+<p><code>Q</code>
 Here are the roles for the production of the <a href="#companion">Companion Book</a>:</p>
 </div>
 <div class="ulist">
@@ -858,7 +858,7 @@ Here are the roles for the production of the <a href="#companion">Companion Book
 <div class="sect2">
 <h3 id="_p_2_personnel_characteristics_and_constraints">P.2 Personnel characteristics and constraints</h3>
 <div id="p2-persons" class="paragraph">
-<p><code>2</code>
+<p><code>R</code>
 Here are the identified people involved in the development of the <a href="#companion">Companion Book</a>:</p>
 </div>
 <div class="ulist">
@@ -922,11 +922,11 @@ Here are the identified people involved in the development of the <a href="#comp
 <div class="sect2">
 <h3 id="_p_3_imposed_technical_choices">P.3 Imposed technical choices</h3>
 <div id="p3-English" class="paragraph">
-<p><code>3</code>
+<p><code>S</code>
 The <a href="#companion">Companion Book</a> should be written in English.</p>
 </div>
 <div id="p3-Springer" class="paragraph">
-<p><code>4</code>
+<p><code>T</code>
 The <a href="#companion">Companion Book</a> should be written in one of the compatible inputs of the publisher, Springer.</p>
 </div>
 <div class="paragraph">
@@ -936,14 +936,14 @@ The <a href="#companion">Companion Book</a> should be written in one of the comp
 <div class="sect2">
 <h3 id="_p_4_schedule_and_milestones">P.4 Schedule and milestones</h3>
 <div id="p4-date" class="paragraph">
-<p><code>5</code>
+<p><code>U</code>
 The expected date of the <a href="#companion">Companion Book</a> is the end of June.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_p_5_tasks_and_deliverables">P.5 Tasks and deliverables</h3>
 <div id="p4-repo" class="paragraph">
-<p><code>6</code>
+<p><code>V</code>
 The tasks are managed through the use of a collaborative repository: <a href="https://github.com/FormalRequirements/requirements-handbook" class="bare">https://github.com/FormalRequirements/requirements-handbook</a>.</p>
 </div>
 </div>
@@ -1064,7 +1064,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-04-26 15:37:06 +0200
+Last updated 2021-04-26 15:38:42 +0200
 </div>
 </div>
 </body>
