--- a/index.html
+++ b/index.html
@@ -446,10 +446,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.2.1 -- 2021-04-27</span>
+<span id="revdate">1.2.4 -- 2023-08-24</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
+<ul class="sectlevel0">
+<li><a href="#_changelog">CHANGELOG</a>
 <ul class="sectlevel1">
 <li><a href="#_goals">Goals</a>
 <ul class="sectlevel2">
@@ -494,6 +496,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 </ul>
+</li>
+</ul>
 </div>
 </div>
 <div id="content">
@@ -515,9 +519,11 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </tr>
 </table>
 </div>
-<div class="paragraph">
-<p><strong>CHANGELOG</strong></p>
 </div>
+</div>
+<h1 id="_changelog" class="sect0">CHANGELOG</h1>
+<div class="openblock partintro">
+<div class="content">
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 20%;">
@@ -558,8 +564,18 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <td class="tableblock halign-left valign-top"><p class="tableblock">Minor improvements of goals, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.1</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-04-27</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.2.3</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2023-08-02</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Add an example of business constraint and its rational in E.3, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.2.4</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2023-08-24</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Add an example of Assumption in E.4, and add Minimum Outcome Principle feature, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.4</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2023-08-24</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
 </tbody>
@@ -736,7 +752,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <dl>
 <dt class="hdlist1"><a href="#companion">Companion Book</a></dt>
 <dd>
-<p>The <em>system</em> to be developed: the companion book of <a href="#Handbook">[Handbook]</a>. Current version available <a href="https://formalrequirements.github.io/requirements-handbook-companion">here</a>.</p>
+<p>The <em>system</em> to be developed: the companion book of <a href="#Handbook">Handbook</a>. Current version available <a href="https://formalrequirements.github.io/requirements-handbook-companion">here</a>.</p>
 </dd>
 </dl>
 </div>
@@ -744,7 +760,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <dl>
 <dt class="hdlist1"><a href="#Handbook">Handbook</a></dt>
 <dd>
-<p>The book, entitled "Handbook of requirements and business analysis", written by Bertrand Meyer (see PDF <a href="http://se.ethz.ch/~meyer/down/requirements_handbook/REQUIREMENTS.pdf">here</a>), and for which the <a href="#companion">[companion]</a> serves as complementary material.</p>
+<p>The book, entitled "Handbook of requirements and business analysis", written by Bertrand Meyer (see PDF <a href="http://se.ethz.ch/~meyer/down/requirements_handbook/REQUIREMENTS.pdf">here</a>), and for which the <a href="#companion">Companion Book</a> serves as complementary material.</p>
 </dd>
 </dl>
 </div>
@@ -791,15 +807,24 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="_e_3_constraints">E.3 Constraints</h3>
-<div class="paragraph">
+<div id="e3-method" class="paragraph">
 <p><code>1</code>
-The <a href="#companion">[companion]</a> should itself apply the method described in the <a href="#handbook">[handbook]</a>.</p>
+The <a href="#companion">Companion Book</a> should itself apply the method described in the <a href="#Handbook">Handbook</a>.</p>
+</div>
+<div id="e3-pages" class="paragraph">
+<p><code>2</code>
+The <a href="#companion">Companion Book</a> should reach at least 160-170 pages.</p>
+</div>
+<div id="e3-pages-rational" class="paragraph">
+<p><code>3</code>
+The rational for requirement <a href="#e3-pages">E.3.2</a> is: in order to have a sufficient distinction from the <a href="https://www.springer.com/series/10028">SpringerBriefs</a>.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_e_4_assumptions">E.4 Assumptions</h3>
-<div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<div id="e4-review" class="paragraph">
+<p><code>1</code>
+The <a href="#companion">Companion Book</a> will be reviewed by the author of the <a href="#Handbook">Handbook</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -987,7 +1012,7 @@ The tasks are managed through the use of a collaborative repository: <a href="ht
 <div class="sect2">
 <h3 id="_s_1_components">S.1 Components</h3>
 <div class="paragraph">
-<p>The components of the <a href="#companion">[companion]</a> initially identified are the following:</p>
+<p>The components of the <a href="#companion">Companion Book</a> initially identified are the following:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -1006,25 +1031,25 @@ The tasks are managed through the use of a collaborative repository: <a href="ht
 <div class="sect2">
 <h3 id="_s_2_functionality">S.2 Functionality</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> No requirements of this type available at this point.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_s_3_interfaces">S.3 Interfaces</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> No requirements of this type available at this point.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_s_4_scenarios_use_cases_user_stories">S.4 Scenarios (use cases, user stories)</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> No requirements of this type available at this point.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_s_5_prioritization">S.5 Prioritization</h3>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<p><span class="icon"><i class="fa fa-warning"></i></span> No requirements of this type available at this point.</p>
 </div>
 </div>
 <div class="sect2">
@@ -1064,7 +1089,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-04-27 10:43:45 +0200
+Last updated 2023-08-24 12:45:38 +0200
 </div>
 </div>
 </body>
