📦 NEW: Scenarios and authors

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.2.5 -- 2023-08-27</span>
+<span id="revdate">1.2.6 -- 2023-08-27</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -574,7 +574,12 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fix Standard plan updates, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.5</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.2.6</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2023-08-27</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Add Scenarios and authors, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.6</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>2023-08-27</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
@@ -609,7 +614,7 @@ The main purpose of the <a href="#companion">Companion Book</a> is to complement
 <h3 id="_g_2_current_situation">G.2 Current situation</h3>
 <div id="g2-current" class="paragraph">
 <p><code>1</code>
-The only available material is the current status of the <a href="#Handbook">Handbook</a>.</p>
+The only available material is the published <a href="#Handbook">Handbook</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -627,7 +632,7 @@ The only available material is the current status of the <a href="#Handbook">Han
 <div id="g4-system" class="paragraph">
 <p><code>1</code>
 The <em>system</em> under development in this specification is an unusual one: a book!
-It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
+It will serve as one of the case studies for the <a href="#companion">Companion Book</a>.</p>
 </div>
 <div class="paragraph">
 <p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook-companion/#_book_templates">Corresponding Artifact</a></p>
@@ -635,8 +640,13 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="_g_5_high_level_usage_scenarios">G.5 High-level usage scenarios</h3>
-<div class="paragraph">
-<p><span class="icon"><i class="fa fa-warning"></i></span> Nothing available at this point.</p>
+<div id="g5-practice" class="paragraph">
+<p><code>1</code>
+The main target usage of the <a href="#companion">Companion Book</a> is for students to practice the <a href="#Handbook">Handbook</a> principles.</p>
+</div>
+<div id="g6-teacher" class="paragraph">
+<p><code>2</code>
+An expected usage of the <a href="#companion">Companion Book</a> is for Requirements Engineering courses teachers to get materials for their class.</p>
 </div>
 </div>
 <div class="sect2">
@@ -703,9 +713,14 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bertrand Meyer, author of the <a href="#Handbook">Handbook</a>, and main evaluator of the <a href="#companion">Companion Book</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the Companion Book</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Leader of the Companion Book</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Project Manager</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a>, author and effort leader of the <a href="#companion">Companion Book</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a>, effort leader of the <a href="#companion">Companion Book</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Authors of the Companion Book</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Developers</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a>, Sophie Ebersold and Marya Naumchev, authors of the <a href="#companion">Companion Book</a></p></td>
 </tr>
 </tbody>
 </table>
@@ -1092,7 +1107,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-08-25 11:21:07 +0200
+Last updated 2023-08-27 18:54:33 +0200
 </div>
 </div>
 </body>
